--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,2 +1,15 @@
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        {% if title %}
+        <title> {{ title }}</title>
+        {% else %}
+        <title> Welcome to the latest world news </title>
+        {% endif %}
+    </head>
+    <body>
 
+    </body>
+</html>
 
