--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,11 +5,42 @@
         {% if title %}
         <title> {{ title }}</title>
         {% else %}
-        <title> Welcome to the latest world news </title>
+        <title> Welcome to the best latest news </title>
         {% endif %}
+        <!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+<!-- Optional theme -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
     </head>
     <body>
+   
+   <nav class="navbar navbar-inverse navbar-fixed-top">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="#">latest news</a>
+    </div>
+    <ul class="nav navbar-nav">
+      <li class="active"><a href="#">Home</a></li>
+      <li><a href="https://www.bbc.com/news">BBC NEWS</a></li>
+      <li><a href="https://www.aljazeera.com/">ALJAZEERA NEWS</a></li>
+      <li><a href="https://abcnews.go.com/">ABC NEWS</a></li>
+    </ul>
+  </div>
+</nav>
+<br> <br>
+<div class="container">
+  <div class="page-header">
+    <h1>LATEST NEWS</h1>      
+  </div>   
+  {% for news, des, i in context%} 
+  <img src="{{i}}" alt="loading">
+  <h3>News:</h3> {{news}}
+  <h4>Description:</h4> {{des}}
+  
+  <a href="https://www.bbc.com/news" class="btn btn-success">READ MORE</a>
+  {%endfor%} 
+</div>
 
     </body>
 </html>
-
